[package]
name = "bevy_pipelines_ready"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for tracking render pipeline status."
repository = "https://github.com/rparrett/bevy_pipelines_ready"
homepage = "https://github.com/rparrett/bevy_pipelines_ready"
documentation = "https://docs.rs/bevy_pipelines_ready"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_render"
]

[dependencies]
crossbeam-channel = "0.5.0"

[dev-dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi-threaded",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "x11",
]
